--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-== Tool to download latest source ==
+== Tool to download latest *stable* source ==
 
 Usage:
 
@@ -11,7 +11,7 @@ i.e.:
 * Needs:
 
 - wget
-- awk filter
+- awk
 
 * Configuration:
 
